Fixed horizontal scroll on mobile

--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -1,4 +1,5 @@
 footer{
+	text-align: center;
 	display: flex;
 	flex-direction:column;
 	justify-content: center;
@@ -6,7 +7,7 @@ footer{
 	font-family: $mainTypog;
 	color: $mainFontColor;
 	background-color: $secondaryColor;
-	font-size: 1.8rem;
+	font-size: 1.6rem;
 	p{
 		margin: 0 0 30px 0;
 	}
@@ -14,6 +15,9 @@ footer{
 
 .footer__content{
 	padding: 50px 0 50px 0;
+	@media (max-width: 580px) {
+		padding: 50px 10px;
+	}
 }
 
 .footerHeader {
