--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -31,14 +31,13 @@ svg{
 		left: -10%;
 	}
 	@media (max-width: 670px) {
-		width: 130%;
-		left: -10%;
+		width: 120%;
 	}
 	@media (max-width: 570px) {
 		width: 150%;
 	}
 	@media (max-width: 480px) {
-		width: 220%;
+		width: 200%;
 	}
 	@media (max-width: 320px) {
 		width: 250%;
@@ -118,11 +117,11 @@ nav li{
 	font-family: $mainTypog;
 	font-size: 1.8rem;
 	padding-bottom: 10px;
-	margin: 40px 30px 20px 30px;
+	margin: 30px 20px 10px 20px;
 	letter-spacing: 1.1px;
 	position: relative;
 	@media (max-width: 580px) {
-		font-size: 1.8rem;
+		font-size: 1.6rem;
 		margin: 30px 15px 30px 15px;
 	}
 	@media (max-width: 400px) {
